[package]
name = "erebor-vault"
version = "0.1.0"
edition = "2021"
description = "⛰️ Local CLI password manager. No cloud. No telemetry. Just you and the mountain."
license = "GPL-3.0"
authors = ["Daniel Quintanilla"]

[dependencies]
clap = { version = "4", features = ["derive"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "7"
toml = "0.8"
rand = "0.8"
hex = "0.4"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
crossterm = "0.27"
